k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  labels:
    app: chat-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app-container
        image: abhi0874/chatapp-multistage:v1
        ports:
        - containerPort: 8000
