k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
  labels:
    app: chat-app
spec:
  type: NodePort
  selector:
    app: chat-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      NodePort: 30080
